--- a/extras/exercises/00_pytorch_fundamentals_exercises.ipynb
+++ b/extras/exercises/00_pytorch_fundamentals_exercises.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "00_pytorch_fundamentals_exercises.ipynb",
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -40,7 +41,7 @@
       "metadata": {
         "id": "bGD0oD8Kizak"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -64,7 +65,7 @@
       "metadata": {
         "id": "6pUq9Dc8i2L7"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -81,13 +82,37 @@
       "source": [
         "# Create another random tensor\n",
         "tensor_2 = torch.rand(1, 7)\n",
-        "# Perform matrix multiplication\n"
+        "# Perform matrix multiplication\n",
+        "tensor_3 = torch.matmul(tensor_1, tensor_2.T)\n",
+        "tensor_3, tensor_3.shape"
       ],
       "metadata": {
-        "id": "NcLqR0Sbi_vT"
+        "id": "NcLqR0Sbi_vT",
+        "outputId": "73cd87b1-6bae-48b9-f84b-4fad218cab70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[2.2738],\n",
+              "         [2.3732],\n",
+              "         [1.3625],\n",
+              "         [1.8838],\n",
+              "         [0.9054],\n",
+              "         [1.1566],\n",
+              "         [1.3399]]),\n",
+              " torch.Size([7, 1]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -113,18 +138,43 @@
       "cell_type": "code",
       "source": [
         "# Set manual seed\n",
-        "MANUAL_SEED = torch.seed(0)\n",
+        "torch.manual_seed(0)\n",
         "\n",
         "# Create two random tensors\n",
-        "tensor\n",
-        "\n",
-        "# Matrix multiply tensors\n"
+        "tensor_1 = torch.rand(7, 7)\n",
+        "#Research: Why not initalize seed again?\n",
+        "tensor_2 = torch.rand(1, 7)\n",
+        "# Matrix multiply tensors\n",
+        "tensor_3 = torch.matmul(tensor_1, tensor_2.T)\n",
+        "tensor_3, tensor_3.shape"
       ],
       "metadata": {
-        "id": "D-lOWI_1jRMm"
+        "id": "D-lOWI_1jRMm",
+        "outputId": "8493e206-642c-433f-e4c3-64c1c536cf54",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[1.8542],\n",
+              "         [1.9611],\n",
+              "         [2.2884],\n",
+              "         [3.0481],\n",
+              "         [1.7067],\n",
+              "         [2.5290],\n",
+              "         [1.7989]]),\n",
+              " torch.Size([7, 1]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -139,12 +189,22 @@
     {
       "cell_type": "code",
       "source": [
-        "# Set random seed on the GPU\n"
+        "# Set random seed on the GPU\n",
+        "torch.cuda.manual_seed(1234)"
       ],
       "metadata": {
         "id": "_LKWcfSTjp00"
       },
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FB8srFfVWiIg"
+      },
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -169,17 +229,46 @@
       "cell_type": "code",
       "source": [
         "# Set random seed\n",
-        "\n",
+        "torch.manual_seed(1234)\n",
         "\n",
         "# Check for access to GPU\n",
-        "\n",
-        "# Create two random tensors on GPU\n"
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\\n\"\n",
+        "print(f\"Device: {device}\")\n",
+        "# Create two random tensors on GPU\n",
+        "tensor_1 = torch.rand(2, 3).to(device)\n",
+        "tensor_2 = torch.rand(2, 3).to(device)\n",
+        "tensor_1, tensor_2"
       ],
       "metadata": {
-        "id": "azXExiFZj5nm"
+        "id": "azXExiFZj5nm",
+        "outputId": "2477e47e-5d1a-4fe1-df82-8cf9ee1970e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Device: cuda\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[0.0290, 0.4019, 0.2598],\n",
+              "         [0.3666, 0.0583, 0.7006]], device='cuda:0'),\n",
+              " tensor([[0.0518, 0.4681, 0.6738],\n",
+              "         [0.3315, 0.7837, 0.5631]], device='cuda:0'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -200,13 +289,32 @@
     {
       "cell_type": "code",
       "source": [
-        "# Perform matmul on tensor_A and tensor_B\n"
+        "# Perform matmul on tensor_A and tensor_B\n",
+        "tensor_3 = torch.matmul(tensor_1, tensor_2.T)\n",
+        "tensor_3, tensor_3.shape"
       ],
       "metadata": {
-        "id": "fAeG7ox0lHEO"
+        "id": "fAeG7ox0lHEO",
+        "outputId": "b6dce451-68c4-4cde-b3a2-5787933dc9ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[0.3647, 0.4709],\n",
+              "         [0.5184, 0.5617]], device='cuda:0'),\n",
+              " torch.Size([2, 2]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -221,14 +329,31 @@
       "cell_type": "code",
       "source": [
         "# Find max\n",
-        "\n",
-        "# Find min\n"
+        "max = torch.max(tensor_3)\n",
+        "# Find min\n",
+        "min = torch.min(tensor_3)\n",
+        "max, min"
       ],
       "metadata": {
-        "id": "Fu8_3mZpllOd"
+        "id": "Fu8_3mZpllOd",
+        "outputId": "0a1db84c-9f0b-46e4-efe7-76b152a0bde4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor(0.5617, device='cuda:0'), tensor(0.3647, device='cuda:0'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -243,15 +368,33 @@
       "cell_type": "code",
       "source": [
         "# Find arg max\n",
+        "argmax = torch.argmax(tensor_3)\n",
         "\n",
+        "# Find arg min\n",
+        "argmin = torch.argmin(tensor_3)\n",
         "\n",
-        "# Find arg min\n"
+        "argmax, argmin"
       ],
       "metadata": {
-        "id": "CCEKt4K2lsfQ"
+        "id": "CCEKt4K2lsfQ",
+        "outputId": "bf1acdc2-1900-4886-90bf-e70855569bbf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor(3, device='cuda:0'), tensor(0, device='cuda:0'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -276,21 +419,43 @@
       "cell_type": "code",
       "source": [
         "# Set seed\n",
-        "\n",
+        "torch.manual_seed(7)\n",
         "\n",
         "# Create random tensor\n",
-        "\n",
+        "tensor_4 = torch.rand(1, 1, 1, 10)\n",
         "\n",
         "# Remove single dimensions\n",
-        "\n",
-        "\n",
-        "# Print out tensors and their shapes\n"
+        "tensor_5 = torch.squeeze(tensor_4)\n",
+        "tensor_5 = tensor_4.squeeze()\n",
+        "# Print out tensors and their shapes\n",
+        "print(tensor_4, tensor_4.shape)\n",
+        "print(tensor_5, tensor_5.shape)"
       ],
       "metadata": {
-        "id": "TQ9zbRzVl1jV"
+        "id": "TQ9zbRzVl1jV",
+        "outputId": "b8efadea-bfec-40eb-af1b-cdf5d274916f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[[[0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297,\n",
+              "            0.3653, 0.8513]]]]),\n",
+              " torch.Size([1, 1, 1, 10]),\n",
+              " tensor([0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297, 0.3653,\n",
+              "         0.8513]),\n",
+              " torch.Size([10]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     }
   ]
 }
